# dkgkit

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/dkgkit-bitcoin/: Cargo.toml  README.md
crates/dkgkit-bitcoin/src/: lib.rs
crates/dkgkit-core/: Cargo.toml  README.md
crates/dkgkit-core/src/: lib.rs
crates/dkgkit-frost/: Cargo.toml
crates/dkgkit-frost/src/: lib.rs
crates/dkgkit-nostr/: Cargo.toml
crates/dkgkit-nostr/src/: lib.rs  live.rs
crates/dkgkit-nostr/tests/: live_relay.rs
crates/dkgkit-sdk/: Cargo.toml
crates/dkgkit-sdk/src/: lib.rs
crates/dkgkit-transport/: Cargo.toml  README.md
crates/dkgkit-transport/src/: lib.rs
docs/: API.md  ARCHITECTURE.md  EXAMPLES.md  FROST_API.md  NEXT_APP_GUIDE.md  NOSTR_DKG.md  PROTOCOL.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY_MODEL.md  SERVICE_WIRING.md
docs/superpowers/plans/: 2026-06-29-live-nostr-transport.md
docs/superpowers/specs/: 2026-06-29-live-nostr-transport-design.md  2026-06-29-vault-coordinator-cli-design.md
examples/bitcoin-message-signing/: Cargo.toml
examples/bitcoin-message-signing/src/: main.rs
examples/nostr-dkg-cli/: Cargo.toml
examples/nostr-dkg-cli/src/: main.rs
examples/nostr-transport-service/: Cargo.toml
examples/nostr-transport-service/src/: main.rs
examples/self-hosted-relay/: README.md  config.toml  docker-compose.yml
examples/vault-chat-demo/: README.md
examples/vault-service/: Cargo.toml  README.md
examples/vault-service/src/: main.rs
