[workspace]
members = [
    "crates/dkgkit-core",
    "crates/dkgkit-frost",
    "crates/dkgkit-bitcoin",
    "crates/dkgkit-transport",
    "crates/dkgkit-nostr",
    "crates/dkgkit-sdk",
    "examples/bitcoin-message-signing",
    "examples/nostr-dkg-cli",
    "examples/vault-service",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/your-org/dkgkit"
version = "0.1.0"
rust-version = "1.76"

[workspace.dependencies]
anyhow = "1"
bitcoin = { version = "0.32", features = ["serde"] }
hex = "0.4"
secp256kfun = { version = "0.12", features = ["serde", "bincode"] }
schnorr_fun = { version = "0.12", features = ["serde", "bincode"] }
bincode = "1.3"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
nostr-sdk = "0.44"
tokio = { version = "1", default-features = false, features = ["rt", "sync", "time", "macros"] }
