[package]
name = "dkgkit-bitcoin"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bitcoin.workspace = true
dkgkit-frost = { path = "../dkgkit-frost" }
hex.workspace = true
serde.workspace = true
sha2.workspace = true

[dev-dependencies]
dkgkit-core = { path = "../dkgkit-core" }
