[package]
name = "dkgkit-frost"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
dkgkit-core = { path = "../dkgkit-core" }
serde.workspace = true
serde_json.workspace = true
secp256kfun.workspace = true
schnorr_fun.workspace = true
sha2.workspace = true
bincode.workspace = true
rand.workspace = true
rand_chacha.workspace = true
